constructFunctionSkippingEvalEnabledCheck() should use tryMakeString() and check for OOM. https://bugs.webkit.org/show_bug.cgi?id=201196 <rdar://problem/54703775>

Reviewed by Yusuke Suzuki.

JSTests:

* stress/constructFunctionSkippingEvalEnabledCheck-should-throw-out-of-memory-error.js: Added.

Source/JavaScriptCore:

* runtime/FunctionConstructor.cpp:
(JSC::constructFunctionSkippingEvalEnabledCheck):



Canonical link: https://commits.webkit.org/214880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249164 268f45cc-cd09-0410-ab3c-d52691b4dbfc