JSTests/stress/constructFunctionSkippingEvalEnabledCheck-should-throw-out-of-memory-error.js
@@ -1,0 +1,10 @@
+var exception;
+try {
+    Function('a'.repeat(2147483623));
+} catch (e) {
+    exception = e;
+}
+
+if (exception != "Error: Out of memory")
+    throw "FAILED";
+
